# HPI

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  additional_python_packages.txt  basic_setup  bgproc  bootstrap  functions.sh  install  lint  mypy.ini  pypackages.txt  pytest.ini  requirements.txt  setup.cfg  setup.py
cleanup/: README.txt  remove_github_gdpr_repo_objects
doc/: MAIL_SETUP.md  TROUBLESHOOTING_INSTALLS.md
jobs/: backup_albums.job  backup_bash_server_history.job  backup_chess.job  backup_firefox.job  backup_ghexport.job  backup_ipython.job  backup_newsboat.job  backup_rexport.job  backup_rss.job  backup_todotxt.job  backup_trakt.job  backup_ttt.job  backup_window_watcher.job  backup_zsh_history.job  check_body.job  check_body.py  check_weight.job  check_weight.py  doctor_snapshot.job  firefox_export.job  ghexport.job  rexport.job  update_calories_weight.job  zsh_history.job
my/: albums.py  apple.py  bash.py  battery.py  body.py  body_log.py  browsing.py  calories.py  chess.py  chrome.py  config.py  discord.py  facebook.py  firefox.py  google_takeout.py  grouvee.py  hypothesis.py  imap.py  ipython.py  league.py  listenbrainz.py  mal.py  mint.py  money.py  mpv.py  newsboat.py  nextalbums.py  old_forums.py  pdfs.py  project_euler.py  reddit.py  rss.py  runelite.py  skype.py  smscalls.py  spotify.py  stackexchange.py  steam.py  todotxt.py  trakt.py  (+4 more)
scripts/: backup_dir  backup_sqlite  check_firefox_subset  check_trakt_ratings  common_netlocs  dedupe_ghexport  edit_calories  food-fzf  functions.sh  history_common  history_fzf  history_fzf_py  (+11 more)
(+219 files in other folders)
