[metadata]
name = HPI_seanbreckenridge
version = 0.0.1
description = "A Python interface to my life"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/HPI"
author = "Sean Breckenridge"
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    backup_to = my.utils.backup_to.__main__:main

[options.package_data]
my = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_incomplete_defs = True
no_implicit_optional = True
disallow_any_generics = True
disallow_untyped_calls = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --verbose
    tests
